fix header alignment in safari

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -8,7 +8,8 @@
 
 .header__app-bar {
   background: #FDFFF9 !important;
-  height: 85px;
+  height: 85px !important;
+  -webkit-align-items: center;
   align-items: center;
   padding-left: 32px !important;
 }
